# movieshlok

./: .env  .gitignore  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json
backend/: .gitignore  Cargo.toml  Dockerfile  dockerbuild.sh  dockerlogs.sh  dockerrun.sh  rustfmt.toml
backend/src/: cache.rs  db.rs  main.rs  routes.rs  utils.rs
backend/src/cache/: lists.rs  review.rs  reviews.rs  tmdb.rs
backend/src/db/: auth.rs  config.rs  lists.rs  review.rs  reviews.rs
backend/src/db/config/: db_connect.rs  models.rs  schema.rs
backend/src/routes/: auth.rs  lists.rs  review.rs  reviews.rs  tmdb.rs
backend/src/utils/: error_handling.rs  mod.rs  websockets.rs
cache/: .gitignore  Cargo.toml  dockerexec.sh  dockerrun.sh
cache/benchmark/: Cargo.toml  ids.txt
cache/benchmark/src/: config.rs  create_data.rs  main.rs  query_data.rs
components/: Navbar.tsx  Pagination.tsx
components/MovieDetails/: Hero.tsx
database/: .gitignore  Dockerfile  dockerbuild.sh  dockerpsql.sh  makeSchema.sql
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  dockerbuild.sh  dockerlogs.sh  env.local  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/components/: Footer.tsx  List.tsx  ListItemCard.tsx  Navbar.tsx  Pagination.tsx  ProfileNav.tsx  Rating.tsx  Searchbar.tsx  Stars.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx  search.tsx
frontend/redux/: hooks.ts  store.ts
frontend/styles/: Home.module.css  HomePage.module.css  PersonDetails.module.css  SearchPage.module.css  globals.css
frontend/utils/: date.ts
pages/: _app.tsx  account-details.tsx  index.tsx
pages/auth/: login.tsx  register.tsx
public/: logo-url.txt
redux/: store.ts
styles/: Navbar.module.css  SearchPage.module.css
(+194 files in other folders)
