[package]
name = "movieshlok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
diesel = { version = "2.0.0", features = ["postgres", "uuid", "r2d2"] }
uuid = { version = "1.3.3", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }

bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"

dotenvy = "0.15"
serde = "1.0.163"
serde_derive = "1.0"
log = "0.4"