[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[lib]
name = "config"
path = "src/config.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.185"
serde_derive = "1.0.185"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
